# agent-zoo

./: .gitignore  REPOSITORY_STRUCTURE.md  ascii_load_image.txt  main.py  pyproject.toml
agent-zoo/: README.md  agent.py  zoo.py
agent-zoo/agents/: agent.py  registry.py
agent-zoo/configs/: permission_config.py
agent-zoo/shared_tools/: __init__.py  abstract_tool.py  sandbox.py
agent-zoo/tasks/: basic_task.py  task.py
agent_zoo/: logging_config.py  workspace.py  zoo.py
agent_zoo/agents/: Dockerfile  __init__.py  agent.py  registry.py  requirements.txt
agent_zoo/configs/: compute_config.py  default_workspace.yaml  permissions_config.py  workspace_config.py
agent_zoo/prompts/: __init__.py  default.py  prompt.py
agent_zoo/shared_tools/: __init__.py  abstract_tool.py  leaderboard.py
agent_zoo/shared_tools/ask_human/: send_request.py  send_slack_message.py  slack.py  slack_request.py  test_slack_request.py
agent_zoo/shared_tools/blog/: blog.py  read_blog.py  write_to_blog.py
agent_zoo/shared_tools/evaluate_agent/: evaluate.py  run_eval.py  (+4 more)
agent_zoo/tasks/: __init__.py  registry.py  task.py
analysis/: main.py  utils.py
analysis/notebooks/: log_analysis.ipynb
configs/: config.yaml
configs/experiments/: USACO.yaml  USACO_defaults.yaml  USACO_multi_2.yaml  USACO_multi_5.yaml  USACO_single.yaml  USACO_single_magentic.yaml  basic.yaml  default.yaml  zygosity.yaml  zygosity_defaults.yaml  zygosity_multi.yaml  zygosity_single.yaml  zygosity_single_magentic.yaml
saved_workspaces/humor_2_agents_4o_2/: joke_drafts.txt  jokes_ideas.txt
utils/: ports.py
(+67 files in other folders)
