[project]
name = "agent-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.3",
    "smolagents",
]

[tool.uv.workspace]
members = ["agent-zoo/workspace/agents/basic_agent"]

[tool.uv.sources]
smolagents = { git = "https://github.com/huggingface/smolagents.git" }
