[project]
name = "agent-zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentslack>=1.0.1",
    "attrs>=24.3.0",
    "docker>=7.1.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "slack-sdk>=3.34.0",
]
